--- a/image-me/app/theme/app.core.scss
+++ b/image-me/app/theme/app.core.scss
@@ -13,4 +13,6 @@
 
 @import "../pages/home/home";
 
-@import "../pages/upload/upload"
+@import "../pages/upload/upload";
+
+@import "../pages/gallery/gallery";
