fix image title

--- a/mobile/app/pages/gallery/gallery.scss
+++ b/mobile/app/pages/gallery/gallery.scss
@@ -12,3 +12,7 @@ ion-card > ion-card-content > ion-card-title{
 	margin-bottom : -20px;
 	font-size : 0.5e;	
 }
+
+.image-title > p{
+	margin-left:50%;
+}
